prompt_template.txt 경로 읽을 수 있도록 추가